monkey-c-formatter/tests/snapshots/snapshots__aligned_dict_breaks_when_wide.snap
---
source: tests/snapshots.rs
expression: "format_aligned_width(r#\"var d = {:foo => \"bar\", :not_foo => \"baz\"};\"#, 30)"
---
var d = {
    :foo     => "bar",
    :not_foo => "baz"
};
