monkey-c-formatter/tests/snapshots/snapshots__aligned_dict_fits_stays_inline.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format_aligned(r#\"var d = {:foo => \"bar\", :not_foo => \"baz\"};\"#)"
---
var d = {:foo => "bar", :not_foo => "baz"};
