monkey-c-formatter/tests/snapshots/snapshots__aligned_dict_unaffected_when_flag_off.snap
---
source: tests/snapshots.rs
expression: "format(r#\"var d = {:foo => \"bar\", :not_foo => \"baz\"};\"#)"
---
var d = {:foo => "bar", :not_foo => "baz"};
