monkey-c-formatter/tests/snapshots/snapshots__array_inline_and_trailing_comma.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(r#\"\nvar fits = [1, 2, 3];\nvar collapses = [1, 2, 3,];\n\"#.trim())"
---
var fits = [1, 2, 3];
var collapses = [
    1,
    2,
    3,
];
