monkey-c-formatter/tests/snapshots/snapshots__array_no_trailing_comma_breaks_when_wide.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format_width(\"var a = [\\\"a_long_string\\\", \\\"another_long_string\\\"];\", 30)"
---
var a = [
    "a_long_string",
    "another_long_string"
];
