monkey-c-formatter/tests/snapshots/snapshots__binary_operator_spacing.snap
---
source: tests/snapshots.rs
expression: "format(\"function f() { var x = a + b * c; }\")"
---
function f() {
    var x = a + b * c;
}
