monkey-c-formatter/tests/snapshots/snapshots__bling_preserved.snap
---
source: tests/snapshots.rs
expression: "format(\"function f() { $.globalFn(); }\")"
---
function f() {
    $.globalFn();
}
