monkey-c-formatter/tests/snapshots/snapshots__block_comment_in_function_body.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"function f() { /* note */ var x = 1; }\")"
---
function f() {
    /* note */ var x = 1;
}
